--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
       </div>
       <div class="tr w-50-l">
       {{ with .Params.images }}
-        {{ range first 1 . }}<img class="mv0 w-70-m" src="{{ . }}"/>{{ end }}
+        {{ range first 1 . }}<img class="mv0 w-70-m" src="{{ . }}" style="pointer-events: none;"/>{{ end }}
       {{ end }}
       </div>
     </div>
