--- a/assets/scaffold.scss
+++ b/assets/scaffold.scss
@@ -192,7 +192,7 @@ form {
   }
   .action.text {
     @extend .db, .mb4, .ttu, .tracked, .b, .link ;
-    color: yellow;
+    color: #FFD700;
   }
 }
 
