updated github read me

--- a/content/chatbot/styles/setup.css
+++ b/content/chatbot/styles/setup.css
@@ -1,6 +1,6 @@
 /* setup container styles */
 .bubble-container {
-	background: #dcdde0;
+	background: #b7b7b7;
 	height: 520px;
 	max-width: 750px;
 	width: 100%;
